--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.17.1"
     },
     "devDependencies": {
+        "node-sass": "^4.14.1",
         "nodemon": "^2.0.4"
     }
 }
